fix preview img rendering bug causing imagaes to overlap container

--- a/react-app/src/components/StoreHomePage/HomePage.css
+++ b/react-app/src/components/StoreHomePage/HomePage.css
@@ -83,7 +83,6 @@
     width:30%
 }
 .preview-ctn{
-    background-color: #09a9edcc;
     /* background-color: #95bcd3; */
     height: 100%;
     margin-left: 7%;
@@ -92,6 +91,7 @@
 }
 
 .preview-item{
+    background-color: #09a9edcc;
     flex-direction: column;
     align-items: center;
     padding: 10%;
@@ -115,12 +115,14 @@
 }
 .preview-images-list-ctn{
     width: 100%;
+    height: 100%;
     margin-top: 5%;
+    overflow: scroll;
     padding: 0;
 }
 .preview-image-ctn{
     width: 100%;
-    height: 25%;
+    height: 9rem;
     margin-top: 2%;
 }
 .preview-image{
